triggerRun implemented
